# mysql_dl_project

./: .coveragerc  .isort.cfg  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  Readme.md  docker-compose.yml  setup.cfg  setup.py
docker/mysql/: init.sql  insert_user.sql
docs/: conf.py  index.rst
outputs/: model_torch.pt
src/mysql_dl_project/: cli.py  init_db.py  sql_runner.py
src/mysql_dl_project/ml/: db.py  pipeline.py  pytorch_model.py  sklearn_model.py
src/mysql_dl_project/utils/: logging.py
src/outputs/: inspect_sklearn.txt  inspect_torch.txt  model_sklearn.pkl  model_torch.pt  predictions_torch_log.txt  train_torch_log.txt
tests/: conftest.py
