# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = mysql_dl_project
description = Generar SQL para interactuar con MYSQL.
author = embolao
author_email = corneigh@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/embolaoworks/mysql_dl_project
project_urls =
    Documentation = https://pyscaffold.org/
    Source = https://github.com/embolaoworks/mysql_dl_project
    Tracker = https://github.com/embolaoworks/mysql_dl_project/issues
    Conda-Forge = https://anaconda.org/conda-forge/mysql_dl_project

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8

install_requires =
    mysql-connector-python>=8.0.26  # MySQL connector
    pandas>=1.3.0  # Useful for data manipulation, you may remove if not needed
    click>=7.1.2  # Click for creating command line interface

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Example for optional features like PDF support or others
# PDF = ReportLab; RXP

testing =
    pytest>=6.2.4
    pytest-cov>=2.12.1
    pytest-mock>=3.6.1
    flake8>=3.9.2
    pre-commit>=2.13.0

[options.entry_points]
console_scripts =
    mysqlcli = mysql_dl_project.cli:cli

[tool:pytest]
addopts =
    --cov mysql_dl_project --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
markers =
    slow: mark tests as slow (deselect with '-m "not slow"')
    system: mark end-to-end system tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.6
package = mysql_dl_project
extensions =
    cirrus
    github_actions
    no_skeleton
    pre_commit
